--- a/package.json
+++ b/package.json
@@ -9,8 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@amcharts/amcharts5": "^5.2.35",
+    "@nextui-org/react": "^1.0.0-beta.10",
+    "axios": "^1.1.3",
+    "chart.js": "^4.0.1",
+    "isomorphic-unfetch": "^3.1.0",
+    "js-cookie": "^3.0.1",
     "next": "13.0.4",
     "react": "18.2.0",
+    "react-chartjs-2": "^5.0.1",
+    "react-datepicker": "^4.8.0",
     "react-dom": "18.2.0"
   }
 }
